# const-math-ghc-plugin

./: LICENSE  README.md  const-math-ghc-plugin.cabal
ConstMath/: Pass.hs  Plugin.hs  PrimRules.hs  Rules.hs  Types.hs
ConstMath/PrimRules/: .V704.hs.swp  .V706.hs.swp  V704.hs  V706.hs
tests/: Make.hs  Makefile  Sqrt.hs  cmpoutput.mak
tests/ghc-7.4/: Makefile
